// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`01 Simple @beta and @internal extraction 1`] = `
Object {
  "_00_lines": Array [
    "START @beta",
    "@unknownTag",
    "@internal @internal END",
  ],
  "_01_gaps": Array [
    "@internal",
  ],
  "_02_summarySection": Object {
    "kind": "Section",
    "nodes": Array [
      Object {
        "kind": "Paragraph",
        "nodes": Array [
          Object {
            "kind": "PlainText",
            "nodeExcerpt": "START ",
          },
          Object {
            "kind": "SoftBreak",
            "nodeExcerpt": "[n]",
          },
          Object {
            "kind": "BlockTag",
            "nodeExcerpt": "@unknownTag",
          },
          Object {
            "kind": "SoftBreak",
            "nodeExcerpt": "[n]",
          },
          Object {
            "kind": "PlainText",
            "nodeExcerpt": " ",
          },
          Object {
            "kind": "PlainText",
            "nodeExcerpt": " END",
          },
          Object {
            "kind": "SoftBreak",
            "nodeExcerpt": "[n]",
          },
        ],
      },
    ],
  },
  "_03_remarksBlock": undefined,
  "_04_privateRemarksBlock": undefined,
  "_05_deprecatedBlock": undefined,
  "_06_paramBlocks": Array [],
  "_07_typeParamBlocks": Array [],
  "_08_returnsBlock": undefined,
  "_09_customBlocks": Array [],
  "_10_inheritDocTag": undefined,
  "_11_modifierTags": Array [
    Object {
      "kind": "BlockTag",
      "nodeExcerpt": "@beta",
    },
    Object {
      "kind": "BlockTag",
      "nodeExcerpt": "@internal",
    },
  ],
  "_12_logMessages": Array [
    "(3,4): The TSDoc tag \\"@unknownTag\\" is not defined in this configuration",
  ],
}
`;

exports[`02 A basic TSDoc comment with common components 1`] = `
Object {
  "_00_lines": Array [
    "Returns the average of two numbers.",
    "",
    "@remarks",
    "This method is part of the {@link core-library#Statistics | Statistics subsystem}.",
    "",
    "@customBlock",
    "This is a custom block containing an @undefinedBlockTag",
    "",
    "@param x - The first input number",
    "@param y - The second input number",
    "@returns The arithmetic mean of [c]x[c] and [c]y[c]",
    "",
    "@beta @customModifier",
  ],
  "_01_gaps": Array [],
  "_02_summarySection": Object {
    "kind": "Section",
    "nodes": Array [
      Object {
        "kind": "Paragraph",
        "nodes": Array [
          Object {
            "kind": "PlainText",
            "nodeExcerpt": "Returns the average of two numbers.",
          },
          Object {
            "kind": "SoftBreak",
            "nodeExcerpt": "[n]",
          },
          Object {
            "kind": "SoftBreak",
            "nodeExcerpt": "[n]",
          },
        ],
      },
    ],
  },
  "_03_remarksBlock": Object {
    "kind": "Block",
    "nodes": Array [
      Object {
        "kind": "BlockTag",
        "nodeExcerpt": "@remarks",
      },
      Object {
        "kind": "Paragraph",
        "nodes": Array [
          Object {
            "kind": "SoftBreak",
            "nodeExcerpt": "[n]",
          },
          Object {
            "kind": "PlainText",
            "nodeExcerpt": "This method is part of the ",
          },
          Object {
            "kind": "LinkTag",
            "nodes": Array [
              Object {
                "kind": "Particle: openingDelimiter",
                "nodeExcerpt": "{",
              },
              Object {
                "kind": "Particle: tagName",
                "nodeExcerpt": "@link",
                "nodeSpacing": " ",
              },
              Object {
                "kind": "DeclarationReference",
                "nodes": Array [
                  Object {
                    "kind": "Particle: packageName",
                    "nodeExcerpt": "core-library",
                  },
                  Object {
                    "kind": "Particle: importHash",
                    "nodeExcerpt": "#",
                  },
                  Object {
                    "kind": "MemberReference",
                    "nodes": Array [
                      Object {
                        "kind": "MemberIdentifier",
                        "nodes": Array [
                          Object {
                            "kind": "Particle: identifier",
                            "nodeExcerpt": "Statistics",
                            "nodeSpacing": " ",
                          },
                        ],
                      },
                    ],
                  },
                ],
              },
              Object {
                "kind": "Particle: pipe",
                "nodeExcerpt": "|",
              },
              Object {
                "kind": "Particle: linkText",
                "nodeExcerpt": " Statistics subsystem",
              },
              Object {
                "kind": "Particle: closingDelimiter",
                "nodeExcerpt": "}",
              },
            ],
          },
          Object {
            "kind": "PlainText",
            "nodeExcerpt": ".",
          },
          Object {
            "kind": "SoftBreak",
            "nodeExcerpt": "[n]",
          },
          Object {
            "kind": "SoftBreak",
            "nodeExcerpt": "[n]",
          },
        ],
      },
    ],
  },
  "_04_privateRemarksBlock": undefined,
  "_05_deprecatedBlock": undefined,
  "_06_paramBlocks": Array [
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodeExcerpt": "@param",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Particle: parameterName",
          "nodeExcerpt": "x",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Particle: hyphen",
          "nodeExcerpt": "-",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Paragraph",
          "nodes": Array [
            Object {
              "kind": "PlainText",
              "nodeExcerpt": "The first input number",
            },
            Object {
              "kind": "SoftBreak",
              "nodeExcerpt": "[n]",
            },
          ],
        },
      ],
    },
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodeExcerpt": "@param",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Particle: parameterName",
          "nodeExcerpt": "y",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Particle: hyphen",
          "nodeExcerpt": "-",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Paragraph",
          "nodes": Array [
            Object {
              "kind": "PlainText",
              "nodeExcerpt": "The second input number",
            },
            Object {
              "kind": "SoftBreak",
              "nodeExcerpt": "[n]",
            },
          ],
        },
      ],
    },
  ],
  "_07_typeParamBlocks": Array [],
  "_08_returnsBlock": Object {
    "kind": "Block",
    "nodes": Array [
      Object {
        "kind": "BlockTag",
        "nodeExcerpt": "@returns",
      },
      Object {
        "kind": "Paragraph",
        "nodes": Array [
          Object {
            "kind": "PlainText",
            "nodeExcerpt": " The arithmetic mean of ",
          },
          Object {
            "kind": "CodeSpan",
            "nodes": Array [
              Object {
                "kind": "Particle: openingDelimiter",
                "nodeExcerpt": "[c]",
              },
              Object {
                "kind": "Particle: code",
                "nodeExcerpt": "x",
              },
              Object {
                "kind": "Particle: closingDelimiter",
                "nodeExcerpt": "[c]",
              },
            ],
          },
          Object {
            "kind": "PlainText",
            "nodeExcerpt": " and ",
          },
          Object {
            "kind": "CodeSpan",
            "nodes": Array [
              Object {
                "kind": "Particle: openingDelimiter",
                "nodeExcerpt": "[c]",
              },
              Object {
                "kind": "Particle: code",
                "nodeExcerpt": "y",
              },
              Object {
                "kind": "Particle: closingDelimiter",
                "nodeExcerpt": "[c]",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodeExcerpt": "[n]",
          },
          Object {
            "kind": "SoftBreak",
            "nodeExcerpt": "[n]",
          },
          Object {
            "kind": "PlainText",
            "nodeExcerpt": " ",
          },
          Object {
            "kind": "SoftBreak",
            "nodeExcerpt": "[n]",
          },
        ],
      },
    ],
  },
  "_09_customBlocks": Array [
    Object {
      "kind": "Block",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodeExcerpt": "@customBlock",
        },
        Object {
          "kind": "Paragraph",
          "nodes": Array [
            Object {
              "kind": "SoftBreak",
              "nodeExcerpt": "[n]",
            },
            Object {
              "kind": "PlainText",
              "nodeExcerpt": "This is a custom block containing an ",
            },
            Object {
              "kind": "BlockTag",
              "nodeExcerpt": "@undefinedBlockTag",
            },
            Object {
              "kind": "SoftBreak",
              "nodeExcerpt": "[n]",
            },
            Object {
              "kind": "SoftBreak",
              "nodeExcerpt": "[n]",
            },
          ],
        },
      ],
    },
  ],
  "_10_inheritDocTag": undefined,
  "_11_modifierTags": Array [
    Object {
      "kind": "BlockTag",
      "nodeExcerpt": "@beta",
    },
    Object {
      "kind": "BlockTag",
      "nodeExcerpt": "@customModifier",
    },
  ],
  "_12_logMessages": Array [
    "(8,41): The TSDoc tag \\"@undefinedBlockTag\\" is not defined in this configuration",
  ],
}
`;

exports[`03 Incomplete @param blocks 1`] = `
Object {
  "_00_lines": Array [
    "@param - The first input number",
    "@param y The second input number",
    "@returns The arithmetic mean of [c]x[c] and [c]y[c]",
  ],
  "_01_gaps": Array [],
  "_02_summarySection": Object {
    "kind": "Section",
  },
  "_03_remarksBlock": undefined,
  "_04_privateRemarksBlock": undefined,
  "_05_deprecatedBlock": undefined,
  "_06_paramBlocks": Array [
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodeExcerpt": "@param",
        },
        Object {
          "kind": "Particle: parameterName",
        },
        Object {
          "kind": "Particle: hyphen",
        },
        Object {
          "kind": "Paragraph",
          "nodes": Array [
            Object {
              "kind": "PlainText",
              "nodeExcerpt": " - The first input number",
            },
            Object {
              "kind": "SoftBreak",
              "nodeExcerpt": "[n]",
            },
          ],
        },
      ],
    },
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodeExcerpt": "@param",
        },
        Object {
          "kind": "Particle: parameterName",
        },
        Object {
          "kind": "Particle: hyphen",
        },
        Object {
          "kind": "Paragraph",
          "nodes": Array [
            Object {
              "kind": "PlainText",
              "nodeExcerpt": " y The second input number",
            },
            Object {
              "kind": "SoftBreak",
              "nodeExcerpt": "[n]",
            },
          ],
        },
      ],
    },
  ],
  "_07_typeParamBlocks": Array [],
  "_08_returnsBlock": Object {
    "kind": "Block",
    "nodes": Array [
      Object {
        "kind": "BlockTag",
        "nodeExcerpt": "@returns",
      },
      Object {
        "kind": "Paragraph",
        "nodes": Array [
          Object {
            "kind": "PlainText",
            "nodeExcerpt": " The arithmetic mean of ",
          },
          Object {
            "kind": "CodeSpan",
            "nodes": Array [
              Object {
                "kind": "Particle: openingDelimiter",
                "nodeExcerpt": "[c]",
              },
              Object {
                "kind": "Particle: code",
                "nodeExcerpt": "x",
              },
              Object {
                "kind": "Particle: closingDelimiter",
                "nodeExcerpt": "[c]",
              },
            ],
          },
          Object {
            "kind": "PlainText",
            "nodeExcerpt": " and ",
          },
          Object {
            "kind": "CodeSpan",
            "nodes": Array [
              Object {
                "kind": "Particle: openingDelimiter",
                "nodeExcerpt": "[c]",
              },
              Object {
                "kind": "Particle: code",
                "nodeExcerpt": "y",
              },
              Object {
                "kind": "Particle: closingDelimiter",
                "nodeExcerpt": "[c]",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodeExcerpt": "[n]",
          },
        ],
      },
    ],
  },
  "_09_customBlocks": Array [],
  "_10_inheritDocTag": undefined,
  "_11_modifierTags": Array [],
  "_12_logMessages": Array [
    "(2,4): The @param block should be followed by a parameter name",
    "(3,4): The @param block should be followed by a parameter name and then a hyphen",
  ],
}
`;

exports[`03 Jumbled order 1`] = `
Object {
  "_00_lines": Array [
    "Returns the average of two numbers. @remarks This method is part of the",
    "{@link core-library#Statistics | Statistics subsystem}.",
    "@beta @customModifier",
    "@returns The arithmetic mean of [c]x[c] and [c]y[c]",
    "@param x - The first input number @param y - The second input number",
    "@customBlock",
    "This is a custom block containing an @undefinedBlockTag",
  ],
  "_01_gaps": Array [],
  "_02_summarySection": Object {
    "kind": "Section",
    "nodes": Array [
      Object {
        "kind": "Paragraph",
        "nodes": Array [
          Object {
            "kind": "PlainText",
            "nodeExcerpt": "Returns the average of two numbers. ",
          },
        ],
      },
    ],
  },
  "_03_remarksBlock": Object {
    "kind": "Block",
    "nodes": Array [
      Object {
        "kind": "BlockTag",
        "nodeExcerpt": "@remarks",
      },
      Object {
        "kind": "Paragraph",
        "nodes": Array [
          Object {
            "kind": "PlainText",
            "nodeExcerpt": " This method is part of the",
          },
          Object {
            "kind": "SoftBreak",
            "nodeExcerpt": "[n]",
          },
          Object {
            "kind": "LinkTag",
            "nodes": Array [
              Object {
                "kind": "Particle: openingDelimiter",
                "nodeExcerpt": "{",
              },
              Object {
                "kind": "Particle: tagName",
                "nodeExcerpt": "@link",
                "nodeSpacing": " ",
              },
              Object {
                "kind": "DeclarationReference",
                "nodes": Array [
                  Object {
                    "kind": "Particle: packageName",
                    "nodeExcerpt": "core-library",
                  },
                  Object {
                    "kind": "Particle: importHash",
                    "nodeExcerpt": "#",
                  },
                  Object {
                    "kind": "MemberReference",
                    "nodes": Array [
                      Object {
                        "kind": "MemberIdentifier",
                        "nodes": Array [
                          Object {
                            "kind": "Particle: identifier",
                            "nodeExcerpt": "Statistics",
                            "nodeSpacing": " ",
                          },
                        ],
                      },
                    ],
                  },
                ],
              },
              Object {
                "kind": "Particle: pipe",
                "nodeExcerpt": "|",
              },
              Object {
                "kind": "Particle: linkText",
                "nodeExcerpt": " Statistics subsystem",
              },
              Object {
                "kind": "Particle: closingDelimiter",
                "nodeExcerpt": "}",
              },
            ],
          },
          Object {
            "kind": "PlainText",
            "nodeExcerpt": ".",
          },
          Object {
            "kind": "SoftBreak",
            "nodeExcerpt": "[n]",
          },
          Object {
            "kind": "PlainText",
            "nodeExcerpt": " ",
          },
          Object {
            "kind": "SoftBreak",
            "nodeExcerpt": "[n]",
          },
        ],
      },
    ],
  },
  "_04_privateRemarksBlock": undefined,
  "_05_deprecatedBlock": undefined,
  "_06_paramBlocks": Array [
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodeExcerpt": "@param",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Particle: parameterName",
          "nodeExcerpt": "x",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Particle: hyphen",
          "nodeExcerpt": "-",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Paragraph",
          "nodes": Array [
            Object {
              "kind": "PlainText",
              "nodeExcerpt": "The first input number ",
            },
          ],
        },
      ],
    },
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodeExcerpt": "@param",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Particle: parameterName",
          "nodeExcerpt": "y",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Particle: hyphen",
          "nodeExcerpt": "-",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Paragraph",
          "nodes": Array [
            Object {
              "kind": "PlainText",
              "nodeExcerpt": "The second input number",
            },
            Object {
              "kind": "SoftBreak",
              "nodeExcerpt": "[n]",
            },
          ],
        },
      ],
    },
  ],
  "_07_typeParamBlocks": Array [],
  "_08_returnsBlock": Object {
    "kind": "Block",
    "nodes": Array [
      Object {
        "kind": "BlockTag",
        "nodeExcerpt": "@returns",
      },
      Object {
        "kind": "Paragraph",
        "nodes": Array [
          Object {
            "kind": "PlainText",
            "nodeExcerpt": " The arithmetic mean of ",
          },
          Object {
            "kind": "CodeSpan",
            "nodes": Array [
              Object {
                "kind": "Particle: openingDelimiter",
                "nodeExcerpt": "[c]",
              },
              Object {
                "kind": "Particle: code",
                "nodeExcerpt": "x",
              },
              Object {
                "kind": "Particle: closingDelimiter",
                "nodeExcerpt": "[c]",
              },
            ],
          },
          Object {
            "kind": "PlainText",
            "nodeExcerpt": " and ",
          },
          Object {
            "kind": "CodeSpan",
            "nodes": Array [
              Object {
                "kind": "Particle: openingDelimiter",
                "nodeExcerpt": "[c]",
              },
              Object {
                "kind": "Particle: code",
                "nodeExcerpt": "y",
              },
              Object {
                "kind": "Particle: closingDelimiter",
                "nodeExcerpt": "[c]",
              },
            ],
          },
          Object {
            "kind": "SoftBreak",
            "nodeExcerpt": "[n]",
          },
        ],
      },
    ],
  },
  "_09_customBlocks": Array [
    Object {
      "kind": "Block",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodeExcerpt": "@customBlock",
        },
        Object {
          "kind": "Paragraph",
          "nodes": Array [
            Object {
              "kind": "SoftBreak",
              "nodeExcerpt": "[n]",
            },
            Object {
              "kind": "PlainText",
              "nodeExcerpt": "This is a custom block containing an ",
            },
            Object {
              "kind": "BlockTag",
              "nodeExcerpt": "@undefinedBlockTag",
            },
            Object {
              "kind": "SoftBreak",
              "nodeExcerpt": "[n]",
            },
          ],
        },
      ],
    },
  ],
  "_10_inheritDocTag": undefined,
  "_11_modifierTags": Array [
    Object {
      "kind": "BlockTag",
      "nodeExcerpt": "@beta",
    },
    Object {
      "kind": "BlockTag",
      "nodeExcerpt": "@customModifier",
    },
  ],
  "_12_logMessages": Array [
    "(8,41): The TSDoc tag \\"@undefinedBlockTag\\" is not defined in this configuration",
  ],
}
`;

exports[`04 typeParam blocks 1`] = `
Object {
  "_00_lines": Array [
    "Constructs a map from a JavaScript object",
    "",
    "@typeParam K - The generic type parameter indicating the key type",
    "@param jsonObject - The input object",
    "@typeParam V - The generic type parameter indicating the value type",
    "@returns The map",
  ],
  "_01_gaps": Array [],
  "_02_summarySection": Object {
    "kind": "Section",
    "nodes": Array [
      Object {
        "kind": "Paragraph",
        "nodes": Array [
          Object {
            "kind": "PlainText",
            "nodeExcerpt": "Constructs a map from a JavaScript object",
          },
          Object {
            "kind": "SoftBreak",
            "nodeExcerpt": "[n]",
          },
          Object {
            "kind": "SoftBreak",
            "nodeExcerpt": "[n]",
          },
        ],
      },
    ],
  },
  "_03_remarksBlock": undefined,
  "_04_privateRemarksBlock": undefined,
  "_05_deprecatedBlock": undefined,
  "_06_paramBlocks": Array [
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodeExcerpt": "@param",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Particle: parameterName",
          "nodeExcerpt": "jsonObject",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Particle: hyphen",
          "nodeExcerpt": "-",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Paragraph",
          "nodes": Array [
            Object {
              "kind": "PlainText",
              "nodeExcerpt": "The input object",
            },
            Object {
              "kind": "SoftBreak",
              "nodeExcerpt": "[n]",
            },
          ],
        },
      ],
    },
  ],
  "_07_typeParamBlocks": Array [
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodeExcerpt": "@typeParam",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Particle: parameterName",
          "nodeExcerpt": "K",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Particle: hyphen",
          "nodeExcerpt": "-",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Paragraph",
          "nodes": Array [
            Object {
              "kind": "PlainText",
              "nodeExcerpt": "The generic type parameter indicating the key type",
            },
            Object {
              "kind": "SoftBreak",
              "nodeExcerpt": "[n]",
            },
          ],
        },
      ],
    },
    Object {
      "kind": "ParamBlock",
      "nodes": Array [
        Object {
          "kind": "BlockTag",
          "nodeExcerpt": "@typeParam",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Particle: parameterName",
          "nodeExcerpt": "V",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Particle: hyphen",
          "nodeExcerpt": "-",
          "nodeSpacing": " ",
        },
        Object {
          "kind": "Paragraph",
          "nodes": Array [
            Object {
              "kind": "PlainText",
              "nodeExcerpt": "The generic type parameter indicating the value type",
            },
            Object {
              "kind": "SoftBreak",
              "nodeExcerpt": "[n]",
            },
          ],
        },
      ],
    },
  ],
  "_08_returnsBlock": Object {
    "kind": "Block",
    "nodes": Array [
      Object {
        "kind": "BlockTag",
        "nodeExcerpt": "@returns",
      },
      Object {
        "kind": "Paragraph",
        "nodes": Array [
          Object {
            "kind": "PlainText",
            "nodeExcerpt": " The map",
          },
          Object {
            "kind": "SoftBreak",
            "nodeExcerpt": "[n]",
          },
        ],
      },
    ],
  },
  "_09_customBlocks": Array [],
  "_10_inheritDocTag": undefined,
  "_11_modifierTags": Array [],
  "_12_logMessages": Array [],
}
`;
